{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 39,
  "lineage": "7129785b-638f-0efb-c95e-324dd152878d",
  "resources": [
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "sampleapp_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:454537364018:loadbalancer/net/sampleappnlbstaging/a8e9fdb43ad814a5",
            "arn_suffix": "net/sampleappnlbstaging/a8e9fdb43ad814a5",
            "dns_name": "sampleappnlbstaging-a8e9fdb43ad814a5.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:454537364018:loadbalancer/net/sampleappnlbstaging/a8e9fdb43ad814a5",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "sampleappnlbstaging",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c37647643d22381"
              },
              {
                "subnet_id": "subnet-06ced57ff3a4277ca"
              }
            ],
            "subnets": [
              "subnet-05c37647643d22381",
              "subnet-06ced57ff3a4277ca"
            ],
            "tags": {
              "Environment": "staging"
            },
            "tags_all": {
              "Environment": "staging"
            },
            "vpc_id": "vpc-0291896b93cdffc32",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:454537364018:listener/net/sampleappnlbstaging/a8e9fdb43ad814a5/5a6a220794a77445",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:454537364018:targetgroup/sampleapp-http-lb-tg-staging/e3369aa392fc36be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:454537364018:listener/net/sampleappnlbstaging/a8e9fdb43ad814a5/5a6a220794a77445",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:454537364018:loadbalancer/net/sampleappnlbstaging/a8e9fdb43ad814a5",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_module.aws_lb.sampleapp_nlb",
            "module.loadbalancer_module.aws_lb_target_group.sampleapp_http_tg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sampleapp_http_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:454537364018:targetgroup/sampleapp-http-lb-tg-staging/e3369aa392fc36be",
            "arn_suffix": "targetgroup/sampleapp-http-lb-tg-staging/e3369aa392fc36be",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:454537364018:targetgroup/sampleapp-http-lb-tg-staging/e3369aa392fc36be",
            "lambda_multi_value_headers_enabled": false,
            "name": "sampleapp-http-lb-tg-staging",
            "port": 443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0291896b93cdffc32"
          }
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privatesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454537364018:security-group/sg-0b5cfef80bc81fcdd",
            "description": "private sg for ec2",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2c4b0c54726d0aa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b5cfef80bc81fcdd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2c4b0c54726d0aa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "privatesg_staging",
            "name_prefix": "",
            "owner_id": "454537364018",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awssgprv"
            },
            "tags_all": {
              "Name": "awssgprv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0291896b93cdffc32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454537364018:security-group/sg-0e2c4b0c54726d0aa",
            "description": "public sg for load balancers ELB in staging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0e2c4b0c54726d0aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "publicsg_staging",
            "name_prefix": "",
            "owner_id": "454537364018",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awssgpub"
            },
            "tags_all": {
              "Name": "awssgpub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0291896b93cdffc32"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}